[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/FamilyTree/FamilyTree1.png" type="Texture" id=1]
[ext_resource path="res://sprites/FamilyTree/FamilyTree5.png" type="Texture" id=2]
[ext_resource path="res://sprites/FamilyTree/FamilyTree4.png" type="Texture" id=3]
[ext_resource path="res://sprites/FamilyTree/FamilyTree2.png" type="Texture" id=4]
[ext_resource path="res://sprites/FamilyTree/FamilyTree6.png" type="Texture" id=5]
[ext_resource path="res://sprites/FamilyTree/FamilyTree3.png" type="Texture" id=6]
[ext_resource path="res://code/FamilyTree.gd" type="Script" id=7]
[ext_resource path="res://sprites/Light/light.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="FamilyTree" type="Node2D"]
position = Vector2( 320, 512 )
script = ExtResource( 7 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 80, 56 )
texture = ExtResource( 8 )
texture_scale = 2.0

[node name="UnshineTween" type="Tween" parent="Light2D"]

[node name="Position2D0" type="Position2D" parent="."]
position = Vector2( -248, -368 )

[node name="Position2D1" type="Position2D" parent="."]
position = Vector2( -80, -248 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 176, -192 )

[node name="Position2D3" type="Position2D" parent="."]
position = Vector2( -192, -16 )

[node name="Position2D4" type="Position2D" parent="."]
position = Vector2( 80, 56 )
[connection signal="tween_all_completed" from="Light2D/UnshineTween" to="." method="_on_UnshineTween_tween_all_completed"]
[connection signal="tween_started" from="Light2D/UnshineTween" to="." method="_on_UnshineTween_tween_started"]
